package com.apuliasoft.designpattern.strategy.example;

public interface IFlyBehaviour {
    void fly();
}